--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <main>
         <section class="section-form">
-            <form action="">
-                <input type="text" placeholder="User ou email">
-                <button type="submit">Procurar</button>
-            </form>
+            <div class="form" action="">
+                <input type="text" placeholder="Username">
+                <button class="btn-submit">Procurar</button>
+            </div>
         </section>
 
         <section class="section-infos">
@@ -58,7 +58,7 @@
     </main>
 
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/main.js"></script>
   <script 
   type="module" 
