atualização 2 do js

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <main>
         <section class="section-form">
-            <div class="form" action="">
+            <form class="form" action="">
                 <input type="text" placeholder="Username">
-                <button class="btn-submit">Procurar</button>
-            </div>
+                <button class="btn-submit" type="submit">Procurar</button>
+            </form>
         </section>
 
         <section class="section-infos">
@@ -47,9 +47,16 @@
                         </h4>
 
                         <ul class="repos">
-                            <li class="repo"></li>
-                            <li class="repo"></li>
-                            <li class="repo"></li>
+                            <a href="">
+                                <li class="repo"></li>
+                            </a>
+                            <a href="">
+                                <li class="repo"></li>
+                            </a>
+                            <a href="">
+                                <li class="repo"></li>
+                            </a>
+                            
                         </ul>
                     </div>
                 </div>
@@ -58,7 +65,9 @@
     </main>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" 
+  integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/main.js"></script>
   <script 
   type="module" 
