atualização 3 do js

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <div class="loadingg"></div>
                     <div class="cam"></div>
                     <div class="redirect-area">
-                        <button class="btn-redirect">
+                        <a href="" class="btn-redirect">
                             <ion-icon name="arrow-redo-circle-outline"></ion-icon>
-                        </button>
+                        </a>
                     </div>
 
                     <div class="infos">
@@ -47,13 +47,13 @@
                         </h4>
 
                         <ul class="repos">
-                            <a href="">
+                            <a class="link-repo" href="">
                                 <li class="repo"></li>
                             </a>
-                            <a href="">
+                            <a class="link-repo" href="">
                                 <li class="repo"></li>
                             </a>
-                            <a href="">
+                            <a class="link-repo" href="">
                                 <li class="repo"></li>
                             </a>
                             
