adicionando dark mode

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dark.css">
     <title>UserHub | Home</title>
 </head>
-<body>
+<body class="dark">
     <header>
         <div class="logo">
             <ion-icon class="logo-git" name="logo-github"></ion-icon>
@@ -15,7 +16,8 @@
 
         <div class="toogle-dark">
             <button class="dark-btn">
-                <ion-icon name="sunny-outline"></ion-icon>
+                <ion-icon class="sun" name="sunny-outline"></ion-icon>
+                <ion-icon class="moon" name="moon-outline"></ion-icon>
             </button>
         </div>
     </header>
@@ -69,6 +71,7 @@
   integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" 
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/main.js"></script>
+  <script src="js/dark.js"></script>
   <script 
   type="module" 
   src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
